--- a/_posts/2020-09-11-Git---程序员必备技能.md
+++ b/_posts/2020-09-11-Git---程序员必备技能.md
@@ -21,4 +21,16 @@ categories: ["工具的使用"]
 
 ## 流程 ##
 - 建立一个以个人命名为项目名的远程版本仓库
-  
+- 访问一个网址:
+    - 主题网址: http: //jekyllthemes.org,选择一个主题，将其代码复制到仓库中的 master 分支
+
+以上两步也可以合并为一步，在主题仓库中点击 fork，跳转页面后，点击 setting 设置仓库名即可
+
+- 将远程版本仓库中的代码克隆到本地
+    - 点击头像，点 code，就可以复制链接
+    - 在文件打开终端执行克隆: git clone -b 链接
+    - 从远程版本仓库克隆下来的代码会自动创建本地版本仓库
+
+- 修改配置文件以及页面内容
+
+- 最后就是书写并美化自己的博客了~
