--- a/_posts/2020-09-11-Git---程序员必备技能.md
+++ b/_posts/2020-09-11-Git---程序员必备技能.md
@@ -7,6 +7,9 @@ categories: ["工具的使用"]
 ---
 
 ## 作用 ##
+
+- 将本地代码推送到远程版本仓库
+
 - 使用GitHub Pages + Jekyll 快速部署个人博客
 
 - GitHub Pages
@@ -21,6 +24,7 @@ categories: ["工具的使用"]
 
 ## 流程 ##
 - 建立一个以个人命名为项目名的远程版本仓库
+
 - 访问一个网址:
     - 主题网址: http: //jekyllthemes.org,选择一个主题，将其代码复制到仓库中的 master 分支
 
@@ -34,3 +38,18 @@ categories: ["工具的使用"]
 - 修改配置文件以及页面内容
 
 - 最后就是书写并美化自己的博客了~
+
+## 常用指令 ## 
+
+- git init 初始化本地版本库
+- git status 查看本地版本库状态
+    若是没提交到暂存区，则会显示红色
+- git add . 当前文件中的所有内容
+- git commit -m ""  该次操作的注释
+
+## 常用符号 ##
+
+- --- 分界符
+-  > 引用
+- 无序列表
+
