--- a/_posts/2020-09-11-网络请求.md
+++ b/_posts/2020-09-11-网络请求.md
@@ -5,3 +5,29 @@ subtitle: "笨猪一号憨憨上线"
 date:   2016-05-20 21:21:21 +0530
 categories: ["WEB基础知识"]
 ---
+
+## 完整URL ##
+
+- 协议 （http https ws wss ftp sftp...) 客户端与服务断双方约定的一种处理请求 (URL) 的方式
+    - 双方
+        - 客户端:发送请求的软件 (调用网卡驱动)
+        - 服务端: web sever （接收请求的软件）
+        
+- 域名: IP 地址的别名
+    - 前缀 www 主域名
+    - name 
+    - 后缀 com cn ...
+
+- 端口: 为软件运行提供一个运行入口  请求指令找到服务器后根据 URL 中指定的端口运行监听这个端口 ( Webserver )
+    - 流程: 找文件  读文件  返文件
+
+- 文件路径
+    - 网站根目录就是项目根本目录中的 pubilc 文件夹
+
+- 参数
+
+- 映射关系
+    - 定义: 一对一关系
+        - ① 在 host 文件中寻找映射关系，若是找不到，则到 DNS 服务器找
+    
+    - 静态路由: 在本地 host 文件中写的 IP 和域名的映射关系
