--- a/_posts/2020-09-11-Git---程序员必备技能.md
+++ b/_posts/2020-09-11-Git---程序员必备技能.md
@@ -47,9 +47,13 @@ categories: ["工具的使用"]
 - git add . 当前文件中的所有内容
 - git commit -m ""  该次操作的注释
 
-## 常用符号 ##
+## Markdownpad 常用符号 ##
 
 - --- 分界符
-- 引用 >
+- 引用 前面加>，可以一直嵌套下去
 - 无序列表
-
+- 一个 # 是一级标题，两个是二级标题，以此类推，支持六级
+- 加粗: 在加粗的文字左右添加两个 *
+- 斜体: 在需要的文字左右添加一个 * 
+- 代码框单行代码: 在左右添加单反引号
+- 代码框多行代码: 在左右添加三个单反引号，可以在三个单反引号后面写注释
