--- a/_posts/2020-09-11-Git---程序员必备技能.md
+++ b/_posts/2020-09-11-Git---程序员必备技能.md
@@ -6,7 +6,7 @@ date:   2016-05-20 21:21:21 +0530
 categories: ["工具的使用"]
 ---
 
-## 作用 ##
+## 作用 
 
 - 将本地代码推送到远程版本仓库
 
@@ -22,7 +22,7 @@ categories: ["工具的使用"]
     - 安装: 无需自己安装，在 GitHub 网站中有预安装了
     - 使用: 不用人为使用，当请求个人域名时，GitHub 服务器会读取仓库 (以个人域名命名的远程版本仓库) 中的 master 分支中的代码，如果该代码为 markdown 语法，则自动调用 Jekyll 将其编译为 html 代码并返回客户端
 
-## 流程 ##
+## 流程 
 - 建立一个以个人命名为项目名的远程版本仓库
 
 - 访问一个网址:
@@ -39,7 +39,7 @@ categories: ["工具的使用"]
 
 - 最后就是书写并美化自己的博客了~
 
-## 常用指令 ## 
+## 常用指令 
 
 - git init 初始化本地版本库
 - git status 查看本地版本库状态
@@ -47,7 +47,7 @@ categories: ["工具的使用"]
 - git add . 当前文件中的所有内容
 - git commit -m ""  该次操作的注释
 
-## Markdownpad 常用符号 ##
+## Markdownpad 常用符号 
 
 - --- 分界符
 - 引用 前面加>，可以一直嵌套下去
@@ -57,3 +57,4 @@ categories: ["工具的使用"]
 - 斜体: 在需要的文字左右添加一个 * 
 - 代码框单行代码: 在左右添加单反引号
 - 代码框多行代码: 在左右添加三个单反引号，可以在三个单反引号后面写注释
+
