--- a/_posts/2020-09-11-网络请求.md
+++ b/_posts/2020-09-11-网络请求.md
@@ -6,7 +6,7 @@ date:   2016-05-20 21:21:21 +0530
 categories: ["WEB基础知识"]
 ---
 
-## 完整URL ##
+## 完整URL 
 
 - 协议 （http https ws wss ftp sftp...) 客户端与服务断双方约定的一种处理请求 (URL) 的方式
     - 双方
