--- a/_posts/2020-09-16-HTML.md
+++ b/_posts/2020-09-16-HTML.md
@@ -127,21 +127,24 @@ categories: ["web基础知识"]
     
     - form 表单标签
         - form
-            - action
-            - method
+            - action 指出表单提交时表单数据将被发往哪里
+            - method 指出表单处理服务器要用什么方法来处理数据 （POST或GET）
         - input
-            - name
-            - value
+            - name 记号
+            - value 属性为 input 的元素规定值 
             - type
-                - text
-                - password
-                - radio
-                - checkbox
-                - submit
+                - text     文本框     value表示文本框里的值
+                - password 密码框     value表示密码框里的值
+                - radio    单选框     value表示该单选框的真实值
+                - checkbox 复选框     value表示该复选框的真实值
+                - submit   提交按钮   value表示按钮上的文字
+                - button   普通按钮   value表示按钮上的文字
+                - reset    重置按钮   value表示按钮上的文字
+                - hindden  隐藏表单域 value表示该表单域的值
             - checked
-            - autofocus
-            - readonly
-            - disabled
+            - autofocus 规定当页面加载时，<input>元素应该自动获得焦点
+            - readonly 只读
+            - disabled 不可编辑不可选取
             - placeholder
             - required
             - tabindex
