--- a/_posts/2020-09-16-HTML.md
+++ b/_posts/2020-09-16-HTML.md
@@ -21,7 +21,7 @@ categories: ["web基础知识"]
 
 ```html
 <!-- 完整标签 -->b
-<div>无敌大帅哥</div>
+<div>你简直帅炸了！！！！！</div>
 <!-- 省略结束标签——单标签   等号前属性名等号后属性值-->
 <img src="" />
 ```
@@ -39,6 +39,22 @@ categories: ["web基础知识"]
 </html>
 ```
 
+- 标签的分类
+    - 块级元素 （block）
+        - 自带换行 
+        - 可以设置宽高 
+        - 默认宽度为100%
+    - 行级元素 （inline）
+        - 不自带换行
+        - 不可以设置宽高
+        - 宽度随内容决定
+    - （inline-block） { 常见的: img  等多媒体标签都属于该类}
+        - 不自带换行
+        - 可以设置宽高
+        - 宽度随着内容而变
+
+> 无论他是属于哪一类标签，所展示出来的都是属于默认 display 属性，均可以通过 css 调整他的 display 属性
+
 - head 标签（头标签）
     - 属性
     - 含义：定义该页面的信息，行为
@@ -52,14 +68,14 @@ categories: ["web基础知识"]
     - 含义: 人们俗称的页面
     - 子标签
         - 文本标签
-            - br 单
-            - hr 单
-            - p
-            - h1-6
+            - br 单 换行
+            - hr 单 分隔
+            - p 段落 
+            - h1-6  标题
         - 超链接标签
             - a 
-                - href
-                - target
+                - href 规定链接的目标地址
+                - target 规定在何处打开链接文档
                 - 如何设置锚点
                     - 目标地设置 a 标签 id 属性
                     - 点击处路径 #idname
@@ -118,9 +134,9 @@ categories: ["web基础知识"]
                     - cellpadding='内容与单元格边框的距离'
         - caption 是用来定义表格的标题的，必须紧跟在开始表格标签的<table>的后面
         - tr
-            - align
-        - th
-        - td
+            - align 表格行的内容的对齐方式
+        - th 表头单元格
+        - td 表格内的标准单元格
             - rowspan='合并行数' （合并之后其他的单元格，注释掉，不要删除掉）
             - colspan='合并列数' （合并之后其他的单元格，注释掉，不要删除掉）
             - align
@@ -149,21 +165,21 @@ categories: ["web基础知识"]
             - required
             - tabindex
 
-        - button
-        - textarea
-        - select
+        - button 提交按钮
+        - textarea 文本区域
+        - select 
             - name
         - option
             - selected
         - label  直接将内容和 input 标签包含在一块
     
     - 列表标签
-        - ul
-        - ol
-        - li
+        - ul 无序列表
+        - ol 有序列表
+        - li 不能单独使用，只能放在 ul ol 中使用   
 
     - 语意化标签
-        - thead
+        - thead 
         - tbody
         - froot
         - div
